[PACA-264] Update ClaimResponse test results to reflect new properties